# pkg/media/endpoint.go
@@ -11,8 +11,20 @@ import (
 	"github.com/gofiber/fiber/v2/log"
 )
 
-// MakeCreatePostHandler - downloads an attachment handler factory
-func MakeCreatePostHandler(s AttachmentsService) fiber.Handler {
+// DownloadPostAMultimediAttachment godoc
+// @Summary Downloads multimedia attached to a post
+// @Description downloads multimedia attached to a post
+// @Tags media
+// @Security Bearer
+// @param Authorization header string true "Authorization"
+// @Produce */*
+// @Param attachmentId path int true "Attachment ID"
+// @Success 200
+// @Failure 400
+// @Failure 401
+// @Failure 404
+// @Router /media/attachments/{attachmentId} [get]
+func MakeDownlodPostAttachmentHandler(s MediaService) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 
 		attachmentId, err := getAttachmentId(c)
@@ -49,7 +61,7 @@ func MakeCreatePostHandler(s AttachmentsService) fiber.Handler {
 			return c.SendStatus(fiber.StatusInternalServerError)
 		}
 
-		return nil
+		return c.SendStatus(fiber.StatusOK)
 	}
 }
 
