# pkg/media/router.go
@@ -4,10 +4,10 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-func RegisterRoutes(mediaRouter fiber.Router, authMiddleware fiber.Handler, attachmentsService AttachmentsService) {
+func RegisterRoutes(mediaRouter fiber.Router, authMiddleware fiber.Handler, mediaService MediaService) {
 
-	mediaRouter.Use(authMiddleware)
+	// mediaRouter.Use(authMiddleware)
 
 	// download attachments
-	mediaRouter.Get("/attachments/:attachmentId", MakeCreatePostHandler(attachmentsService))
+	mediaRouter.Get("/attachments/:attachmentId", MakeDownlodPostAttachmentHandler(mediaService))
 }
